# guatesim

./: .gitignore  LICENSE  README.md  compare_llms.py  compare_llms_multiseed.py  demo.py  demo_hierarchical_real.py  guatemala.md  irl_audit_multiseed.py  irl_audit_real_run.py  irl_b3_human_anchor.py  irl_baselines.py  irl_r6_prior_sweep.py  irl_recovery_curve.py  irl_sensitivity_analysis.py  logs_audit_multiseed.txt  logs_multiseed_run1.txt  logs_r6_prior.txt  minfin_baseline_plot.py  pyproject.toml  qwen_diagnostics.py  reasoning_consistency_v3.py  replot_multiseed_en.py
data/: SOURCES.md  adyacencias.csv  departamentos.csv  minfin_2024_ejecutado.csv  world_bank_gtm.csv
guatemala_sim/: __init__.py  actions.py  banguat_ingest.py  bayesian.py  bootstrap.py  comparison.py  convergent_validity.py  country_profile.py  data_ingest.py  engine.py  faithfulness_benchmark.py  harms.py  indicators.py  logging_.py  minfin_ingest.py  minfin_plot.py  models_registry.py  multiseed.py  plotting.py  president.py  president_openai.py  reasoning_consistency.py  reasoning_consistency_v2.py  reasoning_consistency_v3.py  refresh_data.py  resilient.py  state.py
paper/: README.md  constituciones_reveladas.md  finding_small_models.md  ieee_reframing.md  metodologia.md  paper_ieee.tex  paper_ieee_en.tex  threat_model.md
runs/: 20260419_204339_4a8f1a.jsonl  20260419_204346_2c2c17.jsonl  20260419_205502_432a3e.jsonl  20260419_210405_7391be.jsonl  20260419_210531_8d61e3.jsonl  20260419_215553_368b3d_claude.jsonl  20260419_220110_627d01_claude.jsonl  20260419_221847_d429ef_claude.jsonl  (+8 more)
(+162 files in other folders)
