[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guatemala-sim"
version = "0.1.0"
description = "Testbed donde un LLM toma decisiones ejecutivas de Guatemala sobre un horizonte simulado"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "guatemala-sim contributors" }]
dependencies = [
    "pydantic>=2.5",
    "numpy>=1.26",
    "pandas>=2.1",
    "networkx>=3.2",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "rich>=13.7",
    "structlog>=24.1",
    "anthropic>=0.40",
    "mesa>=3.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
ingest = [
    "wbgapi>=1.0",
    "pandera>=0.18",
    "requests>=2.31",
]
dashboard = [
    "streamlit>=1.30",
]
sd = [
    "pysd>=3.14",
]
bayes = [
    "pymc>=5.10",
    "arviz>=0.17",
]

[tool.setuptools.packages.find]
include = ["guatemala_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
